// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad category 1`] = `
Object {
  "category": "Incorrect value",
}
`;

exports[`should be invalid for bad id 1 1`] = `
Object {
  "id": "Invalid tag",
}
`;

exports[`should be invalid for bad id 2 1`] = `
Object {
  "id": "Invalid tag",
}
`;

exports[`should be invalid for bad id 3 1`] = `
Object {
  "id": "Invalid tag",
}
`;

exports[`should be invalid for empty name 1`] = `
Object {
  "name": "Value must be non-empty string",
}
`;
